# backend/entityservice/api_def/openapi.yaml
@@ -15,6 +15,8 @@ info:
   contact:
     name: 'Confidential Computing, Data61 | CSIRO'
     email: confidential-computing@csiro.au
+    url: https://github.com/data61/anonlink-entity-service
+
   description: >-
     Allows multiple organisations to carry out private record linkage -
     without disclosing personally identifiable information.
@@ -296,7 +298,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ObjectStoreUploadCredentials'
+                $ref: '#/components/schemas/ObjectStoreCredentials'
         '400':
           $ref: '#/components/responses/BadRequest'
         '403':
@@ -859,7 +861,7 @@ components:
           minimum: 0
         description:
           type: string
-          description: oportunity to give those numbers some context, what are we counting here?
+          description: opportunity to give those numbers some context, what are we counting here?
         relative:
           type: number
           format: double
@@ -1103,10 +1105,22 @@ components:
         message:
           type: string
 
-    ObjectStoreUploadCredentials:
+    ObjectStoreCredentials:
       description: Temporary credentials allowing client to upload a file to an object store.
       type: object
       properties:
+        upload:
+          description: Configuration of object store to upload file/s to.
+          type: object
+          properties:
+            endpoint:
+              type: string
+              description: Hostname, and port of object store.
+            bucket:
+              type: string
+            path:
+              type: string
+
         credentials:
           description: Object Store credentials (compatible with both AWS & MinIO)
           type: object
