# backend/entityservice/views/objectstore.py
@@ -1,15 +1,39 @@
 import datetime
 import sys
+import json
+
+import opentracing
 from flask import request
 
 import requests
 
-from minio.error import ResponseError
-from minio.helpers import get_target_url, get_sha256_hexdigest, get_md5_base64digest
-from minio.signer import sign_v4
-
-from entityservice.object_store import create_bucket, connect_to_object_store
+import entityservice.database as db
+from entityservice.miniopatch import assume_role
+from entityservice.object_store import connect_to_upload_object_store
 from entityservice.views import bind_log_and_span, precheck_upload_token
+from entityservice.views.serialization import ObjectStoreCredentials
+
+
+def _get_upload_policy(bucket_name="uploads", path="*"):
+
+    restricted_upload_policy = {
+      "Version": "2012-10-17",
+      "Statement": [
+        {
+          "Action": [
+            "s3:PutObject"
+          ],
+          "Effect": "Allow",
+          "Resource": [
+            "arn:aws:s3:::{}/{}".format(bucket_name, path),
+            "arn:aws:s3:::{}/{}/*".format(bucket_name, path),
+          ],
+          "Sid": "Upload-access-to-specific-bucket-only"
+        }
+      ]
+    }
+
+    return json.dumps(restricted_upload_policy)
 
 
 def authorize_external_upload(project_id):
@@ -20,48 +44,30 @@ def authorize_external_upload(project_id):
 
     log.info("Authorizing external upload")
     token = precheck_upload_token(project_id, headers, parent_span)
-    log.info(f"Token is valid - {token}")
+    with db.DBConn() as conn:
+        dp_id = db.get_dataprovider_id(conn, token)
 
-    client = connect_to_object_store()
+    log.debug(f"Update token is valid")
+    with opentracing.tracer.start_span('assume-role-request', child_of=parent_span) as span:
+        client = connect_to_upload_object_store(trace=sys.stdout)
+        client.set_app_info("anonlink", "development version")
 
-    # TODO This should be done during a server init step not here
-    bucket_name = "uploads"
-    create_bucket(client, bucket_name)
+        bucket_name = "uploads"
+        # Note these credentials are very locked down - our upload client can't even check buckets exist
+        credential_values, expiry = assume_role(client, Policy=_get_upload_policy(bucket_name, path=f"{project_id}/{dp_id}"))
+        log.info("Created temporary object store credentials")
+        log.debug(credential_values)
+    credentials_json = ObjectStoreCredentials().dump(credential_values)
 
-    client.set_app_info("anonlink", "development version")
-    client.trace_on(sys.stdout)
+    # Convert datetime to ISO 8601 string
+    credentials_json["Expiration"] = expiry.strftime('%Y-%m-%dT%H:%M:%S.%f%z')
 
-    query = {
-        "Version": "2011-06-15",
-        "Action": "AssumeRole",
+    return {
+        "credentials": credentials_json,
+        "upload": {
+            # TODO changeme
+            "endpoint": "localhost:9000",
+            "bucket": bucket_name,
+            "path": f"{project_id}/{dp_id}"
+        }
     }
-    headers = {
-        'Content-Length': 0,
-        'User-Agent': "Anonlink"
-    }
-    content = ""
-
-    # Note using client._url_open fails. :-/
-
-
-    # Construct target url.
-    region = client._get_bucket_region(bucket_name)
-    url = get_target_url(client._endpoint_url, bucket_name=bucket_name,
-                         object_name=None, bucket_region=region,
-                         query=query)
-
-    # Get signature headers if any.
-    content_sha256_hex = get_sha256_hexdigest(content)
-    headers['Content-Md5'] = get_md5_base64digest(content)
-    signed_headers = sign_v4("POST", url, region, headers, client._credentials, content_sha256=content_sha256_hex)
-
-    response = client._http.urlopen("POST", url,
-                                  body=content,
-                                  headers=signed_headers,
-                                  preload_content=True)
-
-    data = response.data.decode('utf-8')
-
-    log.info(data)
-
-    return "hi"
